# fpv-ugv

./: .gitignore  README.md
client-esp32/: client-esp32.ino  control.h  videostream.cpp  videostream.h
linux-server-backend/: linux-server-backend.py
server-backend/: .gitignore  CMakeLists.txt
server-backend/application/: CMakeLists.txt  main.cpp
server-backend/communication/: CMakeLists.txt
server-backend/communication/include/: Socket.h  TcpSocket.h  UdpSocket.h
server-backend/communication/src/: Socket.cpp  TcpSocket.cpp  UdpSocket.cpp
server-backend/control/: CMakeLists.txt
server-backend/control/include/: Control.h  Timer.h
server-backend/control/src/: Control.cpp  Timer.cpp
